--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-pricing></app-pricing>
+<app-pricing
+  [cryptocurrencies]="cryptocurrencies"
+></app-pricing>
 <router-outlet />
