--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -5,7 +5,7 @@
     <div>is your all-in-one platform for navigating</div>
     <div>the exciting and fast-moving world of cryptocurrency.</div>
     <div class="image-container">
-      <div>Whether you're new to crypto or an experienced trader, we offer a wide range of tools and resources to support your journey—from real-time price tracking to educational guides and more. </div>
+      <div>Whether you're new to crypto or an experienced trader, we offer a wide range of tools and resources to support your journey—from real-time price tracking to helpful guides and more. </div>
       <div><img height="165" width="165" src="/assets/deng-xiang-rVHIqG9tTOE-unsplash.jpg" /></div>
       <div class="align-right">What sets us apart is our built-in AI chatbot, available 24/7 to answer your questions, explain complex crypto concepts, and help you make informed decisions.</div>
     </div>
