--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -14,8 +14,12 @@
 
     .image-container {
       display: flex;
-      width: 43%;
+      width: 80%;
       align-items: center;
+
+      @media screen and (min-width: 800px) {
+        width: 43%;
+      }
 
       img {
         padding: 10px;
