--- a/src/app/Components/pricing/pricing.component.html
+++ b/src/app/Components/pricing/pricing.component.html
@@ -1,4 +1,34 @@
-<h2>Top Prices</h2>
-<li *ngFor="let cryptocurrency of cryptocurrencies; index as i; trackBy: trackByFn">
-  {{ cryptocurrency.name + '/' + cryptocurrency.symbol + ' - ' + (cryptocurrency.price | currency) }}
-</li>
+<ng-container>
+  <div class="pricing-search-container">
+    <h2>Search for Cryptocurrency</h2>
+    <div>
+      <label>Token id: </label>
+      <input
+        placeholder="search by token id"
+        type="number"
+        [(ngModel)]="tokenId"
+      />
+      <button
+        type="submit"
+        (click)="findPrice()"
+      >
+        Submit
+      </button>
+    </div>
+  </div>
+  <div class="pricing-results-container">
+    <div class="pricing-result">
+      <h3>Top 3 Cryptocurrencies</h3>
+      <li *ngFor="let cryptocurrency of cryptocurrencies; index as i; trackBy: trackByFn">
+        {{ cryptocurrency.name + '/' + cryptocurrency.symbol + ' - ' + (cryptocurrency.price | currency) }}
+      </li>
+    </div>
+    <div class="pricing-result">
+      <h3>Search Results</h3>
+      <p *ngIf="cryptocurrenciesSearchedFor.length === 0">No results found</p>
+      <li *ngFor="let cryptocurrency of cryptocurrenciesSearchedFor; index as i; trackBy: trackByFn">
+        {{ cryptocurrency.name + '/' + cryptocurrency.symbol + ' - ' + (cryptocurrency.price | currency) }}
+      </li>
+    </div>
+  </div>
+</ng-container>
