--- a/src/app/Components/pricing/pricing.component.scss
+++ b/src/app/Components/pricing/pricing.component.scss
@@ -1,3 +1,25 @@
 h2 {
-  font-size: 1.5em;
+  font-size: 1.4em;
+}
+
+h3 {
+  font-size: 1.2em;
+}
+
+.pricing-search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.pricing-results-container {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap;
+
+  .pricing-result {
+    width: 50%;
+  }
 }
