Add chatbot functionality

--- a/src/app/Components/pricing/pricing.component.html
+++ b/src/app/Components/pricing/pricing.component.html
@@ -1,6 +1,6 @@
 <ng-container>
   <div class="pricing-search-container">
-    <h2>Search for Cryptocurrency</h2>
+    <h2>Cryptocurrency Search</h2>
     <div>
       <label>Token id: </label>
       <input
@@ -10,7 +10,7 @@
       />
       <button
         type="submit"
-        (click)="findPrice()"
+        (click)="findPrice($event)"
       >
         Submit
       </button>
