--- a/src/app/Components/pricing/pricing.component.scss
+++ b/src/app/Components/pricing/pricing.component.scss
@@ -1,3 +1,5 @@
+@use '../../../variables' as var;
+
 h2 {
   font-size: 1.4em;
 }
@@ -22,5 +24,11 @@ h3 {
 
   .pricing-result {
     width: 50%;
+
+    .remove {
+      font-weight: 600;
+      cursor: pointer;
+      color: var.$orange;
+    }
   }
 }
